--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">OSB Navigator</string>
     <string name="version">Android app version 2014.0</string>
 
-    <string name="about">Open Source Bridge is a new conference for developers working with open source technologies and for people interested in learning the open source way.  This app ensures you always have the conference schedule right in your pocket.</string>
+    <string name="about">Open Source Bridge is an annual conference focused on building open source community and citizenship through four days of technical talks, hacking sessions, and collaboration opportunities. Participants include developers, hardware hackers, community organizers, and people involved in the business of open source. This app ensures you always have the conference schedule right in your pocket.</string>
     <string name="author">This project was started by Peter Krenesky of the Oregon State University Open Source Lab, home of growing, high-impact open source communities: http://osuosl.org</string>
     <string name="label_contributors">Contributors:</string>
     <string name="contributors">Don Park, Sean Sullivan, Igal Koshevoy, Jacob Helwig, Ben Hengst and Daniel Johnson</string>
